// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getMonarchShadowList generates correctly formatted list 1`] = `
"- @nightmare - Fastest scout. Codebase exploration, grep, file discovery (supports background)
- @saint - Precise implementer + Style enforcer. Code changes, running commands, test verification, naming/convention enforcement
- @cassie - Master strategist. Strategic planning, architecture analysis, complex problem decomposition (supports background)
- @fiend - UI/UX specialist. Styling, components, animations
- @slayer - External knowledge gatherer. Web search, documentation lookup, examples, best practices research (supports background)
- @weaver - Deep reasoning + Skeptical reviewer. Complex debugging, architecture decisions, verification, fake implementation detection, failure recovery
- @kai - Chat companion. Emotional understanding, thoughtful exchange"
`;

exports[`suggestShadowAgent snapshot test complex query 1`] = `
[
  "fiend",
  "nightmare",
  "saint",
]
`;

exports[`getShadowAgentsMarkdownTable generates correct Markdown table 1`] = `
"| Shadow Agent | Role | Best For |
| --- | --- | --- |
| 🐎 **nightmare** | Fastest scout | Finding files by name or pattern, Searching code for patterns or functions |
| ⚔️ **saint** | Precise implementer + Style enforcer | Implementing code changes, Editing files with precision |
| 🔮 **cassie** | Master strategist | Planning complex refactoring, Architecture design decisions |
| 🎨 **fiend** | UI/UX specialist | Building UI components, Styling and layouts |
| 📚 **slayer** | External knowledge gatherer | Finding external documentation, Researching best practices |
| 👁️ **weaver** | Deep reasoning + Skeptical reviewer | Complex architectural decisions, Skeptical review after implementation |
| 🎤 **kai** | Chat companion | Casual conversation and chat, Understanding user intent and feelings |"
`;

exports[`getAllShadowNames snapshot test 1`] = `
[
  "nightmare",
  "saint",
  "cassie",
  "fiend",
  "slayer",
  "weaver",
  "kai",
]
`;

exports[`Snapshot tests for description outputs getShortDescription outputs are stable 1`] = `
[
  {
    "description": "🐎 Shadow Scout - Fastest scout. Codebase exploration, grep, file discovery",
    "name": "nightmare",
  },
  {
    "description": "⚔️ Saint of the Legion - Precise implementer + Style enforcer. Code changes, running commands, test verification, naming/convention enforcement",
    "name": "saint",
  },
  {
    "description": "🔮 Master Strategist - Master strategist. Strategic planning, architecture analysis, complex problem decomposition",
    "name": "cassie",
  },
  {
    "description": "🎨 UI Artificer - UI/UX specialist. Styling, components, animations",
    "name": "fiend",
  },
  {
    "description": "📚 Knowledge Seeker - External knowledge gatherer. Web search, documentation lookup, examples, best practices research",
    "name": "slayer",
  },
  {
    "description": "👁️ Fateweaver - Deep reasoning + Skeptical reviewer. Complex debugging, architecture decisions, verification, fake implementation detection, failure recovery",
    "name": "weaver",
  },
  {
    "description": "🎤 Heartwarden - Chat companion. Emotional understanding, thoughtful exchange",
    "name": "kai",
  },
]
`;

exports[`Snapshot tests for description outputs getFullDescription outputs are stable 1`] = `
[
  {
    "description": 
"🐎 Nightmare - Shadow Scout
Role: Fastest scout
Capabilities: Codebase exploration, grep, file discovery
Best for:
  • Finding files by name or pattern
  • Searching code for patterns or functions
  • Understanding code structure
  • Quick codebase reconnaissance
Background: Supported"
,
    "name": "nightmare",
  },
  {
    "description": 
"⚔️ Saint - Saint of the Legion
Role: Precise implementer + Style enforcer
Capabilities: Code changes, running commands, test verification, naming/convention enforcement
Best for:
  • Implementing code changes
  • Editing files with precision
  • Running build/test commands
  • Verifying changes work correctly
  • Fixing naming convention issues
  • Applying comment format rules
Background: Not supported"
,
    "name": "saint",
  },
  {
    "description": 
"🔮 Cassie - Master Strategist
Role: Master strategist
Capabilities: Strategic planning, architecture analysis, complex problem decomposition
Best for:
  • Planning complex refactoring
  • Architecture design decisions
  • Migration planning
  • Breaking down large tasks
Background: Supported"
,
    "name": "cassie",
  },
  {
    "description": 
"🎨 Fiend - UI Artificer
Role: UI/UX specialist
Capabilities: Styling, components, animations
Best for:
  • Building UI components
  • Styling and layouts
  • Frontend integration
  • Design system work
Background: Not supported"
,
    "name": "fiend",
  },
  {
    "description": 
"📚 Slayer - Knowledge Seeker
Role: External knowledge gatherer
Capabilities: Web search, documentation lookup, examples, best practices research
Best for:
  • Finding external documentation
  • Researching best practices
  • Finding code examples
  • Learning new libraries/frameworks
Background: Supported"
,
    "name": "slayer",
  },
  {
    "description": 
"👁️ Weaver - Fateweaver
Role: Deep reasoning + Skeptical reviewer
Capabilities: Complex debugging, architecture decisions, verification, fake implementation detection, failure recovery
Best for:
  • Complex architectural decisions
  • Skeptical review after implementation
  • Verify changes are truly correct
  • Detect fake/broken fixes
  • Debugging after multiple failed attempts
  • Recovery strategies
Background: Not supported"
,
    "name": "weaver",
  },
  {
    "description": 
"🎤 Kai - Heartwarden
Role: Chat companion
Capabilities: Emotional understanding, thoughtful exchange
Best for:
  • Casual conversation and chat
  • Understanding user intent and feelings
  • Clarifying requirements through dialogue
  • Emotional support and encouragement
Background: Not supported"
,
    "name": "kai",
  },
]
`;
